<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgray"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_info_set"
            android:textSize="20sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/left"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:onClick="onClickBack"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:onClick="onClickSubmit"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/default_avatar"
        android:paddingTop="40dp"
        android:clickable="false"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_without_name"
        android:textSize="20sp"
        android:paddingTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        style="@style/mini_text"
        />
    <RadioGroup
        android:id="@+id/sex_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="15dp">
        <RadioButton
            android:id="@+id/user_male_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            android:button="@drawable/male_selector"
            android:padding="5dp"
            />
        <RadioButton
            android:id="@+id/user_female_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            android:button="@drawable/female_selector"
            android:padding="5dp"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_now"
        style="@style/mini_text"
        />
    <RadioGroup
        android:id="@+id/married_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="20dp">
        <RadioButton
            android:id="@+id/user_parent_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/be_parent"
            android:textSize="20sp"
            android:button="@drawable/check_selector"
            android:padding="10dp"
            />
        <RadioButton
            android:id="@+id/user_inlove_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/be_love"
            android:textSize="20sp"
            android:button="@drawable/check_selector"
            android:padding="10dp"
            />
        <RadioButton
            android:id="@+id/user_single_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/be_single"
            android:textSize="20sp"
            android:button="@drawable/check_selector"
            android:padding="10dp"

            />

    </RadioGroup>

</LinearLayout>