<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/login_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:touchscreenBlocksFocus="false"/>
    <Button
        android:id="@+id/login_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login_viewpager"
        android:background="@null"
        android:text="@string/no_login"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:onClick="onClickLogin"/>
    <LinearLayout
        android:layout_above="@id/login_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:alpha="0.8"
            android:layout_marginRight="0.5dp"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/weibo_login"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:drawableLeft="@mipmap/sina"
                android:drawablePadding="5dp"
                android:gravity="center"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:alpha="0.8"
            android:layout_marginLeft="0.5dp"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat_login"
                android:background="@null"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:drawableLeft="@mipmap/weixin"
                android:drawablePadding="5dp"
                android:gravity="center"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>